--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<br>
 				<a href="mailto:dolnikovgerman@gmail.com">email</a>
 				<br>
-				<a href="https://github.com/German-D">github.com</a>
+				<a href="https://github.com/QAMarin">github.com</a>
 			</div>
 				<center><button type="button">Правило в жизни</button></center>
 				<script type="text/javascript" src="js.js"></script>
