--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<img class="photo" src="112.jpeg" width="170" height="170" alt="фото">
 		</div>
 
-			<p>Начинающий QA</p>
+			<p>Начинающий QA Engineer</p>
 
 			<h2>Обратная связь</h2>
 
